--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.title {
+    @apply text-4xl text-center text-gray-800 my-8 font-semibold text-opacity-75 tracking-wide;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.subtitle {
+    @apply text-3xl text-center text-gray-800 my-8 font-semibold text-opacity-75 tracking-wide
+}
+
+.button-registrar {
+   @apply bg-blue-500 hover:bg-blue-700 text-white text-center py-2 px-4 rounded;
+}
+.button-eliminar {
+   @apply bg-red-500 hover:bg-red-700 text-white text-center py-1 px-3 rounded;
 }
